third_party/rust/cxx/v1/crate/tests/ui/enum_match_without_wildcard.stderr
error[E0004]: non-exhaustive patterns: `A { repr: 2_u8..=u8::MAX }` not covered
  --> tests/ui/enum_match_without_wildcard.rs:12:11
   |
3  |     enum A {
   |     ------ `ffi::A` defined here
...
12 |     match a {
   |           ^ pattern `A { repr: 2_u8..=u8::MAX }` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `ffi::A`
